--- a/Pipfile
+++ b/Pipfile
@@ -23,9 +23,8 @@ uvicorn = "~=0.13.4"
 psycopg2 = "~=2.8.6"
 databases = "~=0.4.1"
 asyncpg = "~=0.22.0"
-SQLAlchemy = "~=1.3.23"
-gunicorn = "~=20.0.4"
-lru = "*"
+SQLAlchemy = "<1.4"
+gunicorn = "~=20.1.0"
 
 [requires]
 python_version = "3.8"
