--- a/Pipfile
+++ b/Pipfile
@@ -19,7 +19,7 @@ requests = "==2.25.1"
 
 [packages]
 fastapi = "~=0.63.0"
-uvicorn = "~=0.13.4"
+"uvicorn[standard]" = "~=0.13.4"
 psycopg2 = "~=2.8.6"
 databases = "~=0.4.1"
 asyncpg = "~=0.22.0"
