--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,6 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-hypothesis= ">=6.6.0"
 pytest = ">=6.2.2"
 pytest-xdist = ">=2.2.1"
 pytest-html = ">=3.1.1"
@@ -26,6 +25,7 @@ asyncpg = ">=0.22.0"
 SQLAlchemy = ">=1.4"
 gunicorn = ">=20.1.0"
 JSON-log-formatter = "*"
+pydantic-settings = "*"
 
 [requires]
 python_version = "3.8"
