--- a/Pipfile
+++ b/Pipfile
@@ -19,8 +19,7 @@ httpx = ">=0.23.0"
 [packages]
 fastapi = ">=0.63.0"
 "uvicorn[standard]" = ">=0.13.4"
-psycopg2 = ">=2.8.6"
-databases = ">=0.4.1"
+"psycopg[pool]" = ">=3.1.18"
 asyncpg = ">=0.22.0"
 SQLAlchemy = ">=1.4"
 gunicorn = ">=20.1.0"
@@ -28,4 +27,4 @@ JSON-log-formatter = "*"
 pydantic-settings = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
